--- a/index.html
+++ b/index.html
@@ -36,12 +36,6 @@
                     </ul>
                     <i class="uil uil-times nav__close" id="nav-close"></i>
                 </div>
-                <div class="nav__btns">
-                    <i class="uil uil-moon change-theme" id="theme-button"></i>
-                    <div class="nav__toggle" id="nav-toggle">
-                        <i class="uil uil-apps"></i>
-                    </div>
-                </div>
             </nav>
         </header>
         <main class="main">
@@ -73,22 +67,14 @@
                             <h1 class="home__title">Hi, I'am JEYASRI S</h1>
                             <h3 class="home__subtitle">Computer Science Engineer</h3>
                             <p class="home__description">Highly motivated and dedicated individual with a strong academic background. Actively seeking opportunities to enhance my skills while making meaningful contributions to the success and growth of the organization.</p>
-                            <a href="#contact" class="button button--flex home__button">Contact Me<i class="uil uil-message button__icon"></i></a>
+                            <a href="#contact" class="button button--flex home__button">Contact Me</a>
                         </div>
-                    </div>
-                    <div class="home__scroll">
-                        <a href="#about" class="home__scroll-button button--flex">
-                            <i class="uil uil-mouse-alt home__scroll-mouse"></i>
-                            <span class="home__scroll-name">Scroll Down</span>
-                            <i class="uil uil-arrow-down home__scroll-arrow"></i>
-                        </a>
                     </div>
                 </div>
             </section>
             <section class="about section" id="about">
                 <h2 class="section__title">About Me</h2>
-                <span class="section__subtitle">My Introduction</span>
-
+                <br>
                 <div class="about__container container grid">
                     <img src="images/image2.jpeg" alt="" class="about__img">
                     <div class="about__data">
@@ -108,19 +94,18 @@
                             </div>
                         </div>
                         <div class="about__buttons">
-                            <a download="" href="docs/JEYASRI_FRESHER.pdf" class="button button--flex">Download Resume<i class="uil uil-download-alt button__icon"></i></a>
+                            <a download="" href="docs/JEYASRI_FRESHER.pdf" class="button button--flex">Download Resume</i></a>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="skills section" id="skills">
                 <h2 class="section__title">Skills</h2>
-                <span class="section__subtitle">My Technical Expertise</span>
+                <br>
                 <div class="skills__container container grid">
                     <div>
                         <div class="skills__content skills__open">
                             <div class="skills__header">
-                                <i class="uil uil-brackets-curly skills__icon"></i>
                                 <div>
                                     <h1 class="skills__title">Web Design & Development</h1>
                                 </div>
@@ -139,7 +124,6 @@
                     <div>
                         <div class="skills__content skills__close">
                             <div class="skills__header">
-                                <i class="uil uil-robot skills__icon"></i>
                                 <div>
                                     <h1 class="skills__title">Machine Learning</h1>
                                 </div>
@@ -158,7 +142,6 @@
                     <div>
                         <div class="skills__content skills__close">
                             <div class="skills__header">
-                                <i class="uil uil-chart-line skills__icon"></i>
                                 <div>
                                     <h1 class="skills__title">Data Analytics</h1>
                                 </div>
@@ -177,7 +160,7 @@
             </section>            
             <section class="qualification__section" id="qualification">
             <h2 class="section__title">Qualification</h2>
-            <span class="section__subtitle">My Professional Journey</span>
+            <br>
             <div class="qualification__container container">
                 <div class="qualification__tabs">
                     <div class="qualification__button button--flex qualification__active" data-target='#education'>
@@ -262,7 +245,7 @@
         </section>
         <section class="portfolio section" id="portfolio">
             <h2 class="section__title">Portfolio</h2>
-            <span class="section__subtitle">My Works</span>
+            <br>
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
                     <div class="portfolio__content grid swiper-slide">
@@ -323,7 +306,7 @@
         </section>        
         <section class="contact section" id="contact">
             <h2 class="section__title">Contact me</h2>
-            <span class="section__subtitle">Get in Touch</span>
+            <br>
             <div class="contact__container container grid">
                 <div>
                     <div class="contact__information">
@@ -368,33 +351,12 @@
                         <textarea id="description" cols="0" rows="7" class="contact__input" required></textarea>
                     </div>
                     <div>
-                        <button style="border: none; font-size: 14px;" type="button" class="button button--flex" onclick="sendEmail()">Send message<i class="uil uil-message button__icon"></i></button>
+                        <button style="border: none; font-size: 14px;" type="button" class="button button--flex" onclick="sendEmail()">Send message</button>
                     </div>
                 </form>
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="footer__bg">
-            <div class="footer__container container grid">
-                <div>
-                    <h1 class="footer__title">Jeyasri</h1>
-                    <span class="footer__subtitle">Computer Science Engineer</span>
-                </div>
-                <ul class="footer__links">
-                    <li><a href="#skills" class="footer__link">Skills</a></li>
-                    <li><a href="#portfolio" class="footer__link">Portfolio</a></li>
-                    <li><a href="#contact" class="footer__link">Contact</a></li>
-                </ul>
-                <div class="footer__socials">
-                    <a href="#" class="footer__social"><i class="uil uil-facebook"></i></a>
-                    <a href="#" class="footer__social"><i class="uil uil-instagram"></i></a>
-                    <a href="#" class="footer__social"><i class="uil uil-twitter-alt"></i></a>
-                </div>
-            </div>
-            <p class="footer__copy" style="color: white;">&#169; Jeyasri. All rights reserved.</p>
-        </div>
-    </footer>
     <a href="#" class="scrollup" id="scroll-up"><i class="uil uil-arrow-up scrollup__icon"></i></a>
     <script src="assets/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
